--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "copy-to-clipboard": "^3.3.3",
+    "dotenv": "^16.4.5",
     "font-awesome": "^4.7.0",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
